manifests/api-dep.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: api
  labels:
    name: api
  annotations:
    flux.weave.works/automated: 'true'
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: api
    spec:
      containers:
      - name: api
        image: elitescrumteam/api-service:v46
        ports:
        - containerPort: 8080
      imagePullSecrets:
      - name: regcred
