manifests/dummy-dep.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: dummy
  labels:
    name: dummy
  annotations:
    flux.weave.works/automated: 'true'
spec:
  replicas: 2
  template:
    metadata:
      labels:
        name: dummy
    spec:
      containers:
      - name: dummy
        image: elitescrumteam/dummy-service:v26
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: regcred
