manifests/event-dep.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: event
  labels:
    name: event
  annotations:
    flux.weave.works/automated: 'true'
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: event
    spec:
      containers:
      - name: event
        image: elitescrumteam/event-service:v4
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: regcred
