manifests/interest-group-dep.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: interest-group
  labels:
    name: interest-group
  annotations:
    flux.weave.works/automated: 'true'
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: interest-group
    spec:
      containers:
      - name: interest-group
        image: elitescrumteam/interest-group-service:v4
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: regcred
