manifests/map-dep.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: map
  labels:
    name: map
  annotations:
    flux.weave.works/automated: 'true'
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: map
    spec:
      containers:
      - name: map
        image: elitescrumteam/map-service:v7
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: regcred
