manifests/notification-service-dep.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: notification
  labels:
    name: notification
  annotations:
    flux.weave.works/automated: 'true'
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: notification
    spec:
      containers:
      - name: notification
        image: elitescrumteam/notification-service:v20
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: regcred
