manifests/user-dep copy.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: analytics
  labels:
    name: analytics
  annotations:
    flux.weave.works/automated: 'true'
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: analytics
    spec:
      containers:
      - name: analytics
        image: elitescrumteam/analytics-service:latest
        ports:
        - containerPort: 5000
      imagePullSecrets:
      - name: regcred
