manifests/user-dep.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: user
  labels:
    name: user
  annotations:
    flux.weave.works/automated: 'true'
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: user
    spec:
      containers:
      - name: user
        image: elitescrumteam/user-service:v42
        ports:
        - containerPort: 5000
      imagePullSecrets:
      - name: regcred
