manifests/warning-dep.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: warning
  labels:
    name: warning
  annotations:
    flux.weave.works/automated: 'true'
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: warning
    spec:
      containers:
      - name: warning
        image: elitescrumteam/warning-service:v145
        ports:
        - containerPort: 4000
      imagePullSecrets:
      - name: regcred
