manifests/dummy-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dummy-service
  labels:
    name: dummy-service
spec:
  type: LoadBalancer
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    name: dummy
