manifests/event-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: event-service
  labels:
    name: event-service
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    name: event
