manifests/forwarding-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: forwarding-service
  labels:
    name: forwarding-service
spec:
  type: LoadBalancer
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    name: forwarding
