manifests/interest-group-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: interest-group-service
  labels:
    name: interest-group-service
  annotations:
    cloud.google.com/load-balancer-type: "Internal"
spec:
  type: ClusterIP 
  ports:
  - port: 80
    targetPort: 80
  selector:
    name: interest-group
