manifests/map-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: map-service
  labels:
    name: map-service
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
  selector:
    name: map
