manifests/notification-service-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  labels:
    name: notification-service
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
  selector:
    name: notification
