manifests/notification-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  labels:
    name: notification-service
spec:
  type: NodePort 
  ports:
  - port: 80
    targetPort: 8080
  selector:
    name: notification
