manifests/ui-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ui-service
  labels:
    name: ui-service
spec:
  type: NodePort 
  ports:
  - port: 80
    targetPort: 80
  selector:
    name: ui
