manifests/user-svc copy.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: analytics-service
  labels:
    name: analytics-service
  annotations:
    cloud.google.com/load-balancer-type: "Internal"
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 5000
  selector:
    name: analytics
