manifests/user-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  labels:
    name: user-service
spec:
  type: NodePort 
  ports:
  - port: 80
    targetPort: 5000
  selector:
    name: user
