manifests/warning-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: warning-service
  labels:
    name: warning-service
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
  selector:
    name: warning
