manifests/app-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /api/*
        backend:
          serviceName: api-service
          servicePort: 80
      - path: /*
        backend:
          serviceName: ui-service
          servicePort: 80
