manifests/tls-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tls-ingress
spec:
  tls:
  - secretName: ssl 
  rules:
  - http:
      paths:
      - path: /api/*
        backend:
          serviceName: api-service
          servicePort: 80
      - path: /*
        backend:
          serviceName: ui-service
          servicePort: 80
